add service test and scripts